OJ-862: Refactored KBVAnswerStorageMapper
- Use TestDataCreator in KBVAnswerStorageMapper
- Replaced for loops with Streams in KBVAnswerStorageMapper
- Added more test coverage KBVAnswerStorageMapper